# Python_Mechatronik_2023

./: .gitignore  Aufgabe.md  README.md  tkgpio_windows.json
01 Hallo, Welt/: main.py
02 Neues Python-Projekt/01 Klassische Variante mit venv/: README.md  requirements.txt
02 Neues Python-Projekt/01 Klassische Variante mit venv/myapp/: main.py
02 Neues Python-Projekt/02 Moderne Variante mit poetry/: README.md  pyproject.toml
02 Neues Python-Projekt/02 Moderne Variante mit poetry/myapp/: main.py
03 KI-Bildgenerator/: API_KEY Vorlage.json  README.md  requirements.txt
03 KI-Bildgenerator/01 Minimalversion/: README.md  pyproject.toml
03 KI-Bildgenerator/01 Minimalversion/ipaint/: main.py
03 KI-Bildgenerator/02 Klassenbasierte Struktur/: README.md  ipaint.py  pyproject.toml
03 KI-Bildgenerator/02 Klassenbasierte Struktur/ipaint/: main.py
03 KI-Bildgenerator/02 Klassenbasierte Struktur/ipaint/generator/: openai.py
03 KI-Bildgenerator/03 Grafische Oberfläche/: README.md  ipaint.py  pyproject.toml  requirements.txt
03 KI-Bildgenerator/Beispielbilder/: README.md
03 KI-Bildgenerator/Version 01/: main.py
04 Selbsfahrendes Fahrzeug/: README.md
04 Selbsfahrendes Fahrzeug/Device/: README.md  audiostream.sh  camera.py  carbot.py  requirements.txt
04 Selbsfahrendes Fahrzeug/Fernsteuerung/: README.md  carbot_rc.py
04 Selbsfahrendes Fahrzeug/Simulation/: README.md  carbot_sim.py  tkgpio.json  tkgpio_windows.json
04 Selbsfahrendes Fahrzeug/Simulation mit tkgpio/: carbot_sim.py
T2b/: requirements.txt  start.py
(+38 files in other folders)
