[tool.poetry]
name = "My App"
version = "0.1.0"
description = ""
authors = ["Dennis Schulmeister-Zimolong <dhbw@windows3.de>"]

[tool.poetry.dependencies]
python = "^3.11"
textual = "^0.10.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
