[tool.poetry]
name = "ipaint"
version = "0.1.0"
description = ""
authors = ["Dennis Schulmeister-Zimolong <dhbw@windows3.de>"]

[tool.poetry.dependencies]
python = "^3.11"
openai = "^0.26.3"

[tool.poetry.dev-dependencies]
PySnooper = "^1.1.1"
pudb = "^2022.1.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
